==> cristianku/winder_cnc/3.5inch_Arduino_8BIT_Module_ILI9486_MAR3501_V1.1/1-Demo/Demo_STM32/Demo_STM32F429IGT6_8BIT/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

u16 LCD_read(void)
{
	u16 data;
	LCD_CS_CLR;
	LCD_RD_CLR;
	delay_us(1);//延时1us	
	data = DATAIN;
	LCD_RD_SET;
	LCD_CS_SET;
	return data;
}

void LCD_WR_REG(u16 data)
{ 
   LCD_RS_CLR;     
	 #if LCD_USE8BIT_MODEL
	 LCD_write(data<<8);
	 #else
	 LCD_write(data);
	 #endif
}

void LCD_WR_DATA(u16 data)
{
	 LCD_RS_SET;
	 #if LCD_USE8BIT_MODEL
	 LCD_write(data<<8);
	 #else
	 LCD_write(data);
	 #endif
}

void Lcd_WriteData_16Bit(u16 Data)
{	
   LCD_RS_SET; 
	 #if LCD_USE8BIT_MODEL
		LCD_CS_CLR;
		DATAOUT(Data);
		LCD_WR_CLR; 
		LCD_WR_SET;
		DATAOUT(Data<<8);
		LCD_WR_CLR; 
		LCD_WR_SET;
		LCD_CS_SET;
 //  LCD_write(Data&0xFF00);
//	 LCD_write(Data<<8);
	 #else
	 LCD_write(Data);
	 #endif
}

void LCD_GPIOInit(void)
{
		GPIO_InitTypeDef GPIO_Initure;
    
    __HAL_RCC_GPIOC_CLK_ENABLE();           //使能GPIOC时钟
		__HAL_RCC_GPIOE_CLK_ENABLE();           //使能GPIOE时钟
    
    GPIO_Initure.Pin=GPIO_PIN_10| GPIO_PIN_7|GPIO_PIN_8| GPIO_PIN_9|GPIO_PIN_6;            //PC10,6,7,8,9
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
    GPIO_Initure.Speed=GPIO_SPEED_LOW;     //快速         
    HAL_GPIO_Init(GPIOC,&GPIO_Initure);     //初始化
		HAL_GPIO_WritePin(GPIOC, GPIO_PIN_10| GPIO_PIN_7|GPIO_PIN_8| GPIO_PIN_9|GPIO_PIN_6, GPIO_PIN_SET);
		
		GPIO_Initure.Pin=GPIO_PIN_All;    //GPIOE
		HAL_GPIO_Init(GPIOE,&GPIO_Initure);     //初始化
		HAL_GPIO_WritePin(GPIOE, GPIO_PIN_All, GPIO_PIN_SET);
}
